[package]
name = "contributors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
octocrab = "0.32.0"
rusqlite = "0.30.0"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"] }
